force-app/main/default/objects/Agency_Service_Providers__mdt/Agency_Service_Providers__mdt.object-meta.xml
<CustomObject>
    <label>Agency Service Providers</label>
    <pluralLabel>Agency Service Providers</pluralLabel>
</CustomObject>