force-app/main/default/objects/Agency_Service_Providers__mdt/fields/Agency_Field__c.field-meta.xml
<CustomField>
    <fullName>Agency_Field__c</fullName>
    <label>Agency Field</label>
    <metadataRelationshipControllingField>Agency_Service_Providers__mdt.Object_Type__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Agency_Service_Providers</relationshipLabel>
    <relationshipName>Agency_Service_Providers</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>