force-app/main/default/objects/Agency_Service_Providers__mdt/fields/Agency_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Agency_Owner_Email__c</fullName>
    <label>Agency Owner Email</label>
    <type>Email</type>
</CustomField>