force-app/main/default/objects/Agency_Service_Providers__mdt/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <label>Object Type</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Agency_Service_Providers</relationshipLabel>
    <relationshipName>Agency_Service_Providers</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>